Revert "Offset landing page cards to avoid top-button overlap and update search tag highlight color"

--- a/style.less
+++ b/style.less
@@ -244,8 +244,6 @@ html > body.stlp--hideTopBar:has(.stlp--container) > {
 		}
 	}
 	.stlp--wrapper {
-		--stlp--cardsTopOffset: 4.5em;
-		--stlp--cardsTopOffsetSearch: 8.25em;
 		flex: 1 1 auto;
 		position: relative;
 		height: 100%;
@@ -255,10 +253,6 @@ html > body.stlp--hideTopBar:has(.stlp--container) > {
 		// right: 0;
 		// bottom: 0;
 		z-index: 2000;
-
-		&:has(.stlp--searchToolbar.stlp--active) {
-			--stlp--cardsTopOffset: var(--stlp--cardsTopOffsetSearch);
-		}
 
 
 		.stlp--categoryTabs {
@@ -340,8 +334,8 @@ html > body.stlp--hideTopBar:has(.stlp--container) > {
 			}
 
 			.stlp--tagChip.stlp--active {
-				background: #51a0de;
-				border-color: #51a0de;
+				background: #0b7f9c;
+				border-color: #0b7f9c;
 			}
 
 			> .stlp--searchClear {
@@ -351,7 +345,6 @@ html > body.stlp--hideTopBar:has(.stlp--container) > {
 
 		.stlp--cards {
 			position: absolute;
-			top: var(--stlp--cardsTopOffset);
 			bottom: 0;
 			left: 0;
 			right: 0;
